--- a/petclinicBootcampFront/src/index.html
+++ b/petclinicBootcampFront/src/index.html
@@ -9,6 +9,15 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+
+<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a routerLink="/" routerLinkActive="active" class="nav-link">Ofertas</a>
+      </li>
+  </nav>
+
+  <h1 class="text-center">Ofertas</h1>
   <app-root></app-root>
 </body>
 </html>
