--- a/petclinicBootcampFront/src/index.html
+++ b/petclinicBootcampFront/src/index.html
@@ -17,7 +17,7 @@
       </li>
   </nav>
 
-  <h1 class="text-center">Ofertas</h1>
+  <h1 class="text-center mt-5 mb-5">Ofertas</h1>
   <app-root></app-root>
 </body>
 </html>
